homeworks/dudnyk/module-3/lesson-10/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-app-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: course-app-lvl8
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
